# 16BitEmulator

./: .gitignore  CMakeLists.txt  README.md  fibo.joshcomp  main.cpp
gates/: AndGate.cpp  NandGate.cpp  NandGate.h  NotGate.cpp  NotGate.h  OrGate.cpp  OrGate.h  and_gate.cpp  and_gate.h  nand_gate.cpp  nand_gate.h  not_gate.cpp  not_gate.h
include/arithmetic/: EqualToZero.h  HalfAdder.h  Increment.h  LessThanZero.h  MultiAdder.h
include/arithmetics/: FullAdder.h  Subtraction.h
include/gates/: ANDGate.h  AndGate.h  NANDGate.h  NOTGate.h  ORGate.h  XORGate.h
include/logic/: ALU.h  Condition.h  UALU.h
include/memory/: CombinedMemory.h  Counter.h  DFF.h  Latch.h  RAM.h  Register.h
include/plumbing/: Selector.h  Selector16.h
include/processor/: ControlUnit.h  InstructionDecoder.h  ProgramEngine.h
src/: main.cpp
src/arithmetic/: EqualToZero.cpp  FullAdder.cpp  HalfAdder.cpp  Increment.cpp  LessThanZero.cpp  MultiAdder.cpp  Subtraction.cpp
src/arithmetics/: FullAdder.cpp  HalfAdder.cpp  Increment.cpp  MultiAdder.cpp  Subtraction.cpp
src/gates/: ANDGate.cpp  AndGate.cpp  NANDGate.cpp  NOTGate.cpp  NandGate.cpp  NotGate.cpp  ORGate.cpp  OrGate.cpp  XORGate.cpp
src/logic/: ALU.cpp  Condition.cpp  UALU.cpp
src/memory/: CombinedMemory.cpp  Counter.cpp  DFF.cpp  Latch.cpp  RAM.cpp  Register.cpp
src/plumbing/: Selector.cpp  Selector16.cpp
src/processor/: ControlUnit.cpp  InstructionDecoder.cpp  ProgramEngine.cpp
